<resources>
    <string name="app_name">CaRatan</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    
    <!-- Login/Registration -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_description">Please enter your registered email and password</string>
    <string name="register_description">Please enter your name, email and password to register</string>
    
    <!-- Validation Messages -->
    <string name="error_username_required">Username is required!</string>
    <string name="error_email_required">Email is required!</string>
    <string name="error_email_invalid">Invalid email format!</string>
    <string name="error_password_required">Password is required!</string>
    <string name="error_password_too_short">Password too short, minimum 6 characters!</string>
    <string name="error_internet_connection">Please check your internet connection!</string>
    <string name="error_login_success">Successfully logged in!</string>
    <string name="error_register_success">Successfully registered!</string>
    
    <!-- Car Related -->
    <string name="car_year_required">Car year is required!</string>
    <string name="car_year_invalid">Invalid car year!</string>
    <string name="car_mileage_required">Car mileage is required!</string>
    <string name="car_mileage_invalid">Invalid car mileage!</string>
    <string name="car_price_required">Car price is required!</string>
    <string name="car_price_too_low">Cannot sell car below $2,000!</string>
    <string name="car_description_required">Car description is required!</string>
    <string name="car_make_list">Car Make List</string>
    <string name="car_brand_collection">Here is a collection of used cars from BRAND for sale</string>
    
    <!-- Navigation -->
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="sell_car">Sell Car</string>
    <string name="profile">Profile</string>
    
    <!-- Profile -->
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to end your session on this application?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    
    <!-- Explore -->
    <string name="explore_description">You can search for your dream used car by typing directly in the search box or applying filters for the car you are looking for</string>
    
    <!-- Sell Car -->
    <string name="sell_car_info_title">Check your car information again</string>
    <string name="response_success">Response received successfully</string>
    <string name="not_available">Not available</string>
    
    <!-- About App -->
    <string name="about_app_description">CaRatan is an Android application created by Team 4 as a final project for the IS534-B Mobile Application Development course. CaRatan makes it easier for used car sellers by becoming an advertising medium and as a used car search platform.</string>
</resources>